# fastapi-official-tutorial

./: body_updates.py  cors.py  debugging.py  dependencies.py  main.py  metadata_and_docs_urls.py  middleware.py  pyproject.toml
app/internal/: admin.py
app_test/: main.py
