[tool.poetry]
name = "fastapi-official-tutorial"
version = "0.1.0"
description = ""
authors = ["HirotoOsaka <ipocchi129@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_official_tutorial"}]

[tool.poetry.dependencies]
python = "3.10.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
pydantic = "^2.6.1"
email-validator = "^2.1.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
